chore: add quotation

--- a/apps/website/mfe/src/app/pages/home-page/sections/hero/hero.component.html
+++ b/apps/website/mfe/src/app/pages/home-page/sections/hero/hero.component.html
@@ -47,7 +47,7 @@
     <ng-container *ngFor="let statistic of statistics">
       <div class="cff-v2-hero-section-numbers">
         <div class="cff-v2-hero-section-number">
-          <div class="cff-v2-hero-section-count">
+          <div class="cff-v2-hero-section-count title-gradient">
             <span class="cff-v2-hero-section-plus">+</span>{{ statistic.statistic | translate }}
           </div>
           <div class="cff-v2-hero-section-content">
