--- a/apps/website/mfe/src/app/pages/instant-quote/client/sections/quote-additonal-info/quote-additonal-info.component.html
+++ b/apps/website/mfe/src/app/pages/instant-quote/client/sections/quote-additonal-info/quote-additonal-info.component.html
@@ -3,9 +3,9 @@
         <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseQuoteInfo"
             aria-expanded="true" aria-controls="collapseQuoteInfo"
             [class.isCompleted]="notes !== '' || filesArr.length !== 0">
-            <div class="row steps w-100">
-                <div class="col-2 step-text-number">Step 4:</div>
-                <div class="col-10 step-text">Additional information (optional) </div>
+            <div class="row  row-cols-2 steps w-100">
+                <div class="col-auto step-text-number">Step 4:</div>
+                <div class="col step-text">Additional information (optional) </div>
             </div>
         </button>
     </h2>
