--- a/apps/website/mfe/src/app/pages/instant-quote/client/sections/quote-space/quote-space.component.html
+++ b/apps/website/mfe/src/app/pages/instant-quote/client/sections/quote-space/quote-space.component.html
@@ -4,9 +4,9 @@
             [class.isSelected]="selectedCffSpace.id !== ''" class="accordion-button" type="button"
             data-bs-toggle="collapse" data-bs-target="#collapseSpace" aria-expanded="true"
             aria-controls="collapseSpace">
-            <div class="row steps w-100">
-                <div class="col-2 step-text-number">Step 2:</div>
-                <div class="col-10 step-text">Select Space </div>
+            <div class="row  row-cols-2 steps w-100">
+                <div class="col-auto  step-text-number">Step 2:</div>
+                <div class="col step-text">Select Space </div>
             </div>
         </button>
     </h2>
