--- a/apps/website/mfe/src/app/pages/instant-quote/client/sections/quote-calendar/quote-calendar.component.scss
+++ b/apps/website/mfe/src/app/pages/instant-quote/client/sections/quote-calendar/quote-calendar.component.scss
@@ -41,7 +41,7 @@
   grid-template-columns: repeat(2, 150px);
   gap: 16px;
   @media (max-width: 576.98px) {
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(2);
   }
 
   input[type='radio'] + label.date-time-item {
