--- a/apps/website/mfe/src/app/pages/instant-quote/client/sections/quote-client-details/quote-client-details.component.scss
+++ b/apps/website/mfe/src/app/pages/instant-quote/client/sections/quote-client-details/quote-client-details.component.scss
@@ -7,7 +7,8 @@
   margin-bottom: 24px;
 }
 .client-details-form {
-  label {
+  label,
+  .error {
     font-weight: 500;
     font-size: 14px;
     line-height: 22px;
