--- a/apps/website/mfe/src/app/pages/instant-quote/client/sections/quote-service/quote-service.component.html
+++ b/apps/website/mfe/src/app/pages/instant-quote/client/sections/quote-service/quote-service.component.html
@@ -3,9 +3,9 @@
         <button (click)="loadServices()" [class.isActive]="selectedCffService.id !== ''" class="accordion-button"
             type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true"
             aria-controls="collapseOne">
-            <div class="row steps w-100">
-                <div class="col-2 step-text-number">Step 1:</div>
-                <div class="col-10 step-text">Select Service</div>
+            <div class="row row-cols-2 steps w-100">
+                <div class="col-auto step-text-number">Step 1:</div>
+                <div class="col step-text">Select Service</div>
             </div>
         </button>
     </h2>
