--- a/apps/website/mfe/src/app/pages/instant-quote/client/sections/quote-summary-options/quote-summary.component.scss
+++ b/apps/website/mfe/src/app/pages/instant-quote/client/sections/quote-summary-options/quote-summary.component.scss
@@ -14,7 +14,7 @@
   font-weight: 600;
   font-size: 16px;
   line-height: 14px;
-  color: rgba(235, 15, 38, 0.6);
+  color: rgba(var(--purple-100-rgb), 1);
   opacity: 0.8;
   margin-bottom: 24px;
   @media (max-width: 575px) {
