--- a/apps/website/mfe/src/styles.scss
+++ b/apps/website/mfe/src/styles.scss
@@ -42,6 +42,12 @@
   --yellow-30: rgba(var(--yellow-100-rgb), 0.3);
   --yellow-10: rgba(var(--yellow-100-rgb), 0.1);
 
+  --red-100: rgb(235, 15, 38);
+  --red-100-rgb: 235, 15, 38;
+  --red-60: rgba(var(--red-100-rgb), 0.6);
+  --red-30: rgba(var(--red-100-rgb), 0.3);
+  --red-10: rgba(var(--red-100-rgb), 0.1);
+
   --fade-purple: #f2e4ff;
   --light-red: #f6f6f6;
   --grey: #f2f5f7;
@@ -172,7 +178,7 @@ a.primary-btn {
     135deg,
     var(--black-100) 0%,
     var(--purple-100) 25%,
-    var(--black-100) 50%,
+    var(--purple-100) 50%,
     var(--purple-100) 75%,
     var(--green-100) 100%
   );
@@ -205,6 +211,10 @@ a.primary-btn {
   @extend .circle-round;
   background-color: var(--purple-100);
 }
+.circle-check-purple-30 {
+  @extend .circle-check-purple;
+  background-color: var(--purple-30);
+}
 .circle-check-purple-10 {
   @extend .circle-check-purple;
   background-color: var(--purple-10);
@@ -216,6 +226,10 @@ a.primary-btn {
 .circle-check-green-30 {
   @extend .circle-round;
   background-color: var(--green-30);
+}
+.circle-check-red-30 {
+  @extend .circle-round;
+  background-color: var(--red-30);
 }
 main {
   @media (max-width: 575px) {
@@ -292,4 +306,13 @@ span.mdc-tab-indicator {
     transform: scale(0.95);
     box-shadow: 0 0 0 0 rgba(var(--purple-100-rgb), 0);
   }
+}
+
+.feedback {
+  display: none;
+}
+
+.form-select:disabled {
+  border-color: transparent;
+  background-color: var(--purple-10);
 }
