--- a/libs/shared/footer/src/lib/footer/footer.component.html
+++ b/libs/shared/footer/src/lib/footer/footer.component.html
@@ -56,7 +56,7 @@
 								" formControlName="email" />
                         </div>
                         <div class="col-md-2 col-6 px-0">
-                            <button type="submit"
+                            <button [disabled]="email.invalid" type="submit"
                                 class="btn primary-btn d-flex align-items-center justify-content-center px-0 w-100">{{
                                 newsletterProgress
                                 ? ''
@@ -67,6 +67,16 @@
                                     <span class="visually-hidden">Loading...</span>
                                 </div>
                             </button>
+                        </div>
+                        <div [class.d-flex]="email.invalid && (email.dirty || email.touched)"
+                            class="col-12 gap-1 align-items-center feedback">
+                            <img src="/assets/icons/error.svg" alt="" width="16">
+                            <div> Please check your email</div>
+                        </div>
+                        <div [class.d-flex]="email.valid && (email.dirty || email.touched)"
+                            class="col-12 gap-1 align-items-center feedback">
+                            <img src="/assets/icons/check-green.svg" alt="" width="16">
+                            <div> Looks good!</div>
                         </div>
                     </div>
                 </form>
