--- a/apps/website/mfe/src/app/components/how-it-works/how-it-works.component.html
+++ b/apps/website/mfe/src/app/components/how-it-works/how-it-works.component.html
@@ -4,16 +4,12 @@
         <div class="wc-how-it-works-description">{{'HOW_IT_WORKS.DESCRIPTION' | translate}}</div>
         <div class="d-flex flex-column flex-md-row align-items-start justify-content-md-center align-items-md-center"
             style="column-gap: 32px; row-gap: 8px;">
-            <button class="btn primary-btn" type="button">
-                <a [routerLink]="'/instant-quote'">{{
-                    'HOW_IT_WORKS.BUTTON_1' | translate
-                    }}</a>
-            </button>
-            <button class="btn secondary-btn" type="button">
-                <a [routerLink]="'/how-it-works'">{{
-                    'HOW_IT_WORKS.BUTTON_2' | translate
-                    }}</a>
-            </button>
+            <a class="btn primary-btn" type="button" [routerLink]="['/instant-quote']">{{
+                'HOW_IT_WORKS.BUTTON_1' | translate
+                }}</a>
+            <a class="btn secondary-btn link-btn border" type="button" [routerLink]="['/how-it-works']">{{
+                'HOW_IT_WORKS.BUTTON_2' | translate
+                }}</a>
         </div>
     </div>
 </section>
