--- a/apps/website/mfe/src/app/pages/about-us/sections/hero-section/hero-section.component.html
+++ b/apps/website/mfe/src/app/pages/about-us/sections/hero-section/hero-section.component.html
@@ -5,14 +5,11 @@
             <div class="about-hero-section-description">{{'ABOUT_US_PAGE.HERO_SECTION.DESCRIPTION'| translate}}</div>
             <div
                 class="about-hero-section-btns justify-content-md-start justify-content-center d-flex align-items-center">
-                <button class="btn primary-btn" type="button">
-                    <a target="_blank" href="">{{
-                        'ABOUT_US_PAGE.HERO_SECTION.BUTTON_1' | translate
-                        }}</a>
-                </button>
-                <button class="btn link-btn" type="button">
-                    <a (click)="bookACall()">{{ 'ABOUT_US_PAGE.HERO_SECTION.BUTTON_2' | translate }}</a>
-                </button>
+                <a class="btn primary-btn" type="button" [routerLink]="['/instant-quote']">{{
+                    'ABOUT_US_PAGE.HERO_SECTION.BUTTON_1' | translate
+                    }}</a>
+                <a class="btn link-btn" type="button" (click)="bookACall()">{{ 'ABOUT_US_PAGE.HERO_SECTION.BUTTON_2' |
+                    translate }}</a>
             </div>
         </div>
         <div class="col-lg-1"></div>
