--- a/apps/website/mfe/src/app/pages/about-us/sections/who-is-section/who-is-section.component.html
+++ b/apps/website/mfe/src/app/pages/about-us/sections/who-is-section/who-is-section.component.html
@@ -13,17 +13,16 @@
                         </div>
                         <div class="about-who-is-section-description">{{'ABOUT_US_PAGE.WHO_IS_SECTION.DESCRIPTION_1'|
                             translate}}
-
                         </div>
                         <div class="about-who-is-section-description" style="margin-bottom: 24px;">
                             {{'ABOUT_US_PAGE.WHO_IS_SECTION.DESCRIPTION_2'|
                             translate}}
                         </div>
-                        <button class="btn primary-btn" type="button">
-                            <a target="_blank" href="">{{
-                                'ABOUT_US_PAGE.WHO_IS_SECTION.BUTTON' | translate
-                                }}</a>
-                        </button>
+                        <!-- 
+                            - the button is not clickable
+                            <a class="btn primary-btn" type="button" [routerLink]="['/how-it-works']">{{
+                            'ABOUT_US_PAGE.WHO_IS_SECTION.BUTTON' | translate
+                            }}</a> -->
                     </div>
                 </div>
             </div>
