--- a/apps/website/mfe/src/app/pages/home-page/sections/how-we-do-it/how-we-do-it.component.html
+++ b/apps/website/mfe/src/app/pages/home-page/sections/how-we-do-it/how-we-do-it.component.html
@@ -27,11 +27,9 @@
           </ng-container>
         </div>
         <div class="d-flex flex-column flex-md-row align-items-center">
-          <button class="btn primary-btn" type="button">
-            <a href="">{{
-              'HOME_PAGE.HOW_WE_DO_IT.BUTTON' | translate
-              }}</a>
-          </button>
+          <a class="btn primary-btn" type="button" [routerLink]="['instant-quote']"> {{
+            'HOME_PAGE.HOW_WE_DO_IT.BUTTON' | translate
+            }}</a>
         </div>
       </div>
       <div class="col-12 col-lg-5 align-self-center d-flex justify-content-center">
