--- a/apps/website/mfe/src/app/pages/home-page/sections/our-community/our-community.component.html
+++ b/apps/website/mfe/src/app/pages/home-page/sections/our-community/our-community.component.html
@@ -17,15 +17,14 @@
       </div>
     </div>
     <div class="row">
-      <div class="d-flex flex-column flex-lg-row align-items-center" style="row-gap: 12px; column-gap: 66px">
-        <button class="btn primary-btn" type="button">
-          <a target="_blank" href="">{{
-            'HOME_PAGE.OUR_COMMUNITY.BUTTON_1' | translate
-            }}</a>
-        </button>
-        <button class="btn secondary-btn" type="button">
-          <a href="">{{ 'HOME_PAGE.OUR_COMMUNITY.BUTTON_2' | translate }}</a>
-        </button>
+      <div class="d-flex flex-column flex-lg-row align-items-center" style="row-gap: 12px; column-gap:12px">
+        <a class="btn primary-btn" type="button" [routerLink]="['instant-quote']">{{
+          'HOME_PAGE.OUR_COMMUNITY.BUTTON_1' | translate
+          }}</a>
+        <a (click)="bookACall()" class="btn secondary-btn link-btn border" type="button">{{
+          'HOME_PAGE.OUR_COMMUNITY.BUTTON_2'
+          |
+          translate }}</a>
       </div>
     </div>
   </div>
