--- a/apps/website/mfe/src/app/pages/home-page/sections/why-cff/why-cff.component.html
+++ b/apps/website/mfe/src/app/pages/home-page/sections/why-cff/why-cff.component.html
@@ -17,14 +17,11 @@
           {{ 'HOME_PAGE.WHY_CFF.DESCRIPTION' | translate }}
         </div>
         <div class="d-flex flex-column flex-lg-row align-items-center">
-          <button class="btn primary-btn" type="button">
-            <a target="_blank" href="">{{
-              'HOME_PAGE.WHY_CFF.BUTTON_1' | translate
-              }}</a>
-          </button>
-          <button class="btn link-btn" type="button">
-            <a href="">{{ 'HOME_PAGE.WHY_CFF.BUTTON_2' | translate }}</a>
-          </button>
+          <a [routerLink]="['instant-quote']" class="btn primary-btn" type="button">{{
+            'HOME_PAGE.WHY_CFF.BUTTON_1' | translate
+            }}</a>
+          <a (click)="bookACall()" class="btn link-btn" type="button">
+            {{ 'HOME_PAGE.WHY_CFF.BUTTON_2' | translate }}</a>
         </div>
       </div>
       <div class="d-none d-lg-block col align-self-center">
